# estart

./: .travis.yml  README.md  makefile
src/: CMakeLists.txt  state4c.h  state4c_go.c  state4c_initialise.c  state4c_setTransition.c
src/examples/: CMakeLists.txt
src/examples/eeprom/: CMakeLists.txt  main.c
src/lib/make/: generic_build_targets.mk
